# SpaceStation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_ENG.md
cmake/: CheckDependencies.cmake
include/libspace/: libspace.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  client.cc  server.cc
src/libspace/: CMakeLists.txt  spacemodule.cc  spacestation.cc
tests/: CMakeLists.txt  test.cc
